Bug fix: Unexpected gap under header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@
 body {
     overflow-x: hidden;
     overflow-y: overlay;
-    /* ! Affects mobiles other than iPhone??
+    /* ! This disables pixel-ratio
     padding-left: env(safe-area-inset-left);
     padding-right: env(safe-area-inset-right); */
 
@@ -173,30 +173,25 @@ body {
 
     overflow: hidden;
     display: grid;
-    position: relative;
     place-items: center;
     place-content: center;
 
     background: url('../favicon.svg') center, var(--bg-color);
     background-size: 1rem;
-    
 }
 .tachie-container {
-    width: 100%;
-    height: 100%;
     display: grid;
-    position: relative;
+    position: absolute;
     place-items: center;
     place-content: center;
-    transform: scale(1);
 }
 .tachie-container img {
     overflow-y: visible;
     position: absolute;
     height: 100vh;
+    height: 100svh;
     object-fit: cover;
 
-    transform: translateX(0%) rotate3d(0, 0, 0);
     transition: all var(--trans-duration) ease-out;
     pointer-events: none;
 }
